Sun Jan  4 16:37:35 CET 2009 Guido Günther <agx@sigxcpu.org>

	* src/krb5-auth-applet.c (ka_update_status): don't show a tooltip
	about ticket expiry if ticket is renewable

Sun Jan  4 16:28:35 CET 2009 Guido Günther <agx@sigxcpu.org>

	pkinit support
	* README: document pkinit gconf keys
	* configure.ac: check for heimdal's pkinit support
	* krb5-auth-applet.h (Krb5AuthApplet): add pk_userid
	* krb5-auth-dialog.c (ka_krb5_cc_clear_mcred): new function
	  (set_options_from_creds): call
	  krb5_get_init_creds_opt_set_default_flags
	  (ka_auth_pkinit): new function
	  (grab_credentials): call ka_auth_pkinit
	  (ka_renew_credentials); simplify
	  (ka_get_tgt_from_ccache): likewise
	* krb5-auth-gconf.c (ka_gconf_set_pk_userid): new function

Sun Jan  4 16:21:20 CET 2009 Guido Günther <agx@sigxcpu.org>

	use get_error_message() when possible
	* configure.ac: check for krb5_get_error_message
	* src/krb5-auth-dialog.c (get_error_message): new function
	  (ka_error_dialog): check for KRB5_LIBOS_PWDINTR

Sun Jan  4 16:18:19 CET 2009 Guido Günther <agx@sigxcpu.org>

	* src/krb-auth-dialog.[ch]: separate ticket renewal and interactive
	  ticket acquisition

Sun Jan  4 16:15:57 CET 2009 Guido Günther <agx@sigxcpu.org>

	* src/krbt-auth-{applet,dialog}.c don't popup the dialog if we have a
	  tray icon

Sun Jan  4 14:50:59 CET 2009 Guido Günther <agx@sigxcpu.org>

	use GtkSecureEntry instead of GtkEntry for the password entry
	* src/Makefile.am (AM_CPPFLAGS): add secmem/, gtksecentry/ to include
	  path
	* src/krb5-auth-dialog.c: use gtk_secure_entry_get_text instead of
	  gtk_entry_get_text
	* src/krb5-auth-dialog.glade (krb5_auth_dialog_setup): use custom widget
	  (ka_create_gtk_secure_entry,ka_secmem_init): new functions
	  (main): call ka_secmem_init, set custom glade handler for password
	  entry field

Sun Jan  4 14:48:14 CET 2009 Guido Günther <agx@sigxcpu.org>

	move dbus handling into a separate file
	* src/krb5-auth-dbus.[ch]: new file