@@ -4,6 +4,7 @@ smallicondir=${datadir}/icons/hicolor/22x22/apps
 smallicon_DATA=		\
 	krb-valid-ticket.png	\
 	krb-no-valid-ticket.png	\
+	krb-expiring-ticket.png	\
 	$(NULL)
 
 EXTRA_DIST=\
